--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,24 +9,22 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Raleway", serif;
-}*/
+  font-family: Arial, Helvetica, sans-serif;
+} */
 
 @layer base {
   :root {
-    --background: 0 0% 100%; /* Default for light mode */
-    --background-secondary: 0 0% 95%; /* Light mode secondary background */
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
@@ -58,17 +56,15 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-    --button-primary: 193 63.5% 40.6%; /* #238a9f */
-    --button-text-primary: 56 100% 52.5%; /* #dfda00 */
-    --text-primary: 0 0% 1%; /* #010100 */
-    --hover-text: 56 100% 52.5%; /* #dfda00 */
+
+    /* Runtime Color Palette */
+    --lime-shade: 59 100% 44%;
+    --teal-shade: 190 64% 38%;
+    --dark-shade: 0 0% 20%;
+    --darker-shade: 60 100% 0%;
   }
   .dark {
-    --background: 0 0% 20%; /* #333333 */
-    --background-secondary: 0 0% 0%; /* #010100 */
-    --primary: 193 63.5% 40.6%; /* Button Primary */
-    --primary-foreground: 210 40% 98%; /* Button Text Color */
-    /* --background: 222.2 84% 4.9%; */
+    --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
@@ -100,10 +96,6 @@ body {
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-    --button-primary: 193 63.5% 40.6%; /* #238a9f */
-    --button-text-primary: 56 100% 52.5%; /* #dfda00 */
-    --text-primary: 0 0% 100%; /* #ffffff */
-    --hover-text: 56 100% 52.5%; /* #dfda00 */
   }
 }
 
