Implement custom pagination component and update task fetching logic; enhance admin dashboard styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -253,6 +253,6 @@ body {
 /* Admin Dashboard Card */
 .card-dark {
   @apply transition-all duration-200;
-  @apply dark:bg-gradient-to-bl dark:from-teal-300 dark:to-teal-900 dark:border-teal-400;
+  @apply dark:bg-gradient-to-bl dark:from-input dark:to-background dark:border-lime-shade dark:hover:border-teal-400;
   @apply hover:shadow-2xl hover:shadow-teal-shade/40;
 }
