Enhance pagination functionality and UI; update project date default value, improve scrollbar styling, and refactor components for better readability

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -261,6 +261,7 @@ body {
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
 }
 
 /* Track */
@@ -272,5 +273,4 @@ body {
 ::-webkit-scrollbar-thumb {
   background: hsl(var(--teal-shade));
   border-radius: 24px;
-  height: 20px !important;
 }
