--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -287,6 +287,10 @@ body {
   @apply hover:shadow-2xl hover:shadow-teal-shade/40;
 }
 
+.form-bg {
+  @apply dark:bg-gradient-to-br from-slate-800 via-slate-900 to-slate-950;
+}
+
 /* Scrollbar Styling */
 /* width */
 ::-webkit-scrollbar {
