--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -291,6 +291,10 @@ body {
   @apply dark:bg-gradient-to-br from-slate-800 via-slate-900 to-slate-950;
 }
 
+.profile-bg {
+  @apply dark:bg-gradient-to-br from-slate-800 via-slate-900 to-slate-950;
+}
+
 /* Scrollbar Styling */
 /* width */
 ::-webkit-scrollbar {
