--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -326,11 +326,11 @@ body {
 
 /* Disable the text selection */
 
-:root {
+/* :root {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} */
